// Vitest Snapshot v1

exports[`Repository.update > updates an object successfully 1`] = `
[
  {
    "body": Uint8Array [
      31,
      139,
      8,
      0,
      0,
      0,
      0,
      0,
      0,
      3,
      171,
      86,
      202,
      76,
      81,
      178,
      82,
      42,
      74,
      77,
      142,
      55,
      52,
      50,
      54,
      81,
      210,
      81,
      202,
      75,
      204,
      77,
      5,
      138,
      56,
      166,
      36,
      42,
      213,
      2,
      0,
      247,
      162,
      171,
      54,
      30,
      0,
      0,
      0,
    ],
    "method": "PATCH",
    "url": "https://mock.xata.sh/db/xata:main/tables/users/data/rec_1234",
  },
  {
    "body": undefined,
    "method": "GET",
    "url": "https://mock.xata.sh/db/xata:main/tables/users/data/rec_1234",
  },
  {
    "body": undefined,
    "method": "GET",
    "url": "https://mock.xata.sh/db/xata:main",
  },
]
`;

exports[`client options > provide branch as a function 1`] = `
{
  "body": Uint8Array [
    31,
    139,
    8,
    0,
    0,
    0,
    0,
    0,
    0,
    3,
    171,
    86,
    42,
    72,
    76,
    79,
    85,
    178,
    170,
    86,
    42,
    206,
    172,
    2,
    210,
    134,
    181,
    58,
    74,
    201,
    249,
    57,
    165,
    185,
    121,
    197,
    74,
    86,
    209,
    74,
    90,
    74,
    177,
    181,
    0,
    26,
    238,
    206,
    141,
    35,
    0,
    0,
    0,
  ],
  "method": "POST",
  "url": "https://mock.xata.sh/db/xata:branch/tables/users/query",
}
`;

exports[`client options > provide branch as a string 1`] = `
{
  "body": Uint8Array [
    31,
    139,
    8,
    0,
    0,
    0,
    0,
    0,
    0,
    3,
    171,
    86,
    42,
    72,
    76,
    79,
    85,
    178,
    170,
    86,
    42,
    206,
    172,
    2,
    210,
    134,
    181,
    58,
    74,
    201,
    249,
    57,
    165,
    185,
    121,
    197,
    74,
    86,
    209,
    74,
    90,
    74,
    177,
    181,
    0,
    26,
    238,
    206,
    141,
    35,
    0,
    0,
    0,
  ],
  "method": "POST",
  "url": "https://mock.xata.sh/db/xata:branch/tables/users/query",
}
`;

exports[`client options > provide branch as an array 1`] = `
{
  "body": Uint8Array [
    31,
    139,
    8,
    0,
    0,
    0,
    0,
    0,
    0,
    3,
    171,
    86,
    42,
    72,
    76,
    79,
    85,
    178,
    170,
    86,
    42,
    206,
    172,
    2,
    210,
    134,
    181,
    58,
    74,
    201,
    249,
    57,
    165,
    185,
    121,
    197,
    74,
    86,
    209,
    74,
    90,
    74,
    177,
    181,
    0,
    26,
    238,
    206,
    141,
    35,
    0,
    0,
    0,
  ],
  "method": "POST",
  "url": "https://mock.xata.sh/db/xata:branch/tables/users/query",
}
`;

exports[`create > successful 1`] = `
[
  {
    "body": Uint8Array [
      31,
      139,
      8,
      0,
      0,
      0,
      0,
      0,
      0,
      3,
      171,
      86,
      202,
      75,
      204,
      77,
      85,
      178,
      82,
      114,
      76,
      73,
      84,
      170,
      5,
      0,
      5,
      114,
      250,
      41,
      14,
      0,
      0,
      0,
    ],
    "method": "POST",
    "url": "https://mock.xata.sh/db/xata:main/tables/users/data",
  },
  {
    "body": undefined,
    "method": "GET",
    "url": "https://mock.xata.sh/db/xata:main/tables/users/data/rec_1234",
  },
  {
    "body": undefined,
    "method": "GET",
    "url": "https://mock.xata.sh/db/xata:main",
  },
]
`;

exports[`query > getFirst > returns a single object 1`] = `
[
  {
    "body": Uint8Array [
      31,
      139,
      8,
      0,
      0,
      0,
      0,
      0,
      0,
      3,
      171,
      86,
      42,
      72,
      76,
      79,
      85,
      178,
      170,
      86,
      42,
      206,
      172,
      2,
      210,
      134,
      181,
      58,
      74,
      201,
      249,
      57,
      165,
      185,
      121,
      197,
      74,
      86,
      209,
      74,
      90,
      74,
      177,
      181,
      0,
      26,
      238,
      206,
      141,
      35,
      0,
      0,
      0,
    ],
    "method": "POST",
    "url": "https://mock.xata.sh/db/xata:main/tables/users/query",
  },
  {
    "body": undefined,
    "method": "GET",
    "url": "https://mock.xata.sh/db/xata:main",
  },
]
`;

exports[`query > getFirst > returns null if no objects are returned 1`] = `
[
  {
    "body": Uint8Array [
      31,
      139,
      8,
      0,
      0,
      0,
      0,
      0,
      0,
      3,
      171,
      86,
      42,
      72,
      76,
      79,
      85,
      178,
      170,
      86,
      42,
      206,
      172,
      2,
      210,
      134,
      181,
      58,
      74,
      201,
      249,
      57,
      165,
      185,
      121,
      197,
      74,
      86,
      209,
      74,
      90,
      74,
      177,
      181,
      0,
      26,
      238,
      206,
      141,
      35,
      0,
      0,
      0,
    ],
    "method": "POST",
    "url": "https://mock.xata.sh/db/xata:main/tables/users/query",
  },
  {
    "body": undefined,
    "method": "GET",
    "url": "https://mock.xata.sh/db/xata:main",
  },
]
`;

exports[`query > getMany > query with one filter 1`] = `
[
  {
    "body": Uint8Array [
      31,
      139,
      8,
      0,
      0,
      0,
      0,
      0,
      0,
      3,
      171,
      86,
      74,
      203,
      204,
      41,
      73,
      45,
      82,
      178,
      170,
      86,
      82,
      73,
      204,
      201,
      81,
      178,
      138,
      174,
      86,
      202,
      75,
      204,
      77,
      85,
      178,
      82,
      74,
      203,
      207,
      87,
      170,
      141,
      173,
      213,
      81,
      74,
      206,
      207,
      41,
      205,
      205,
      43,
      6,
      202,
      41,
      105,
      41,
      197,
      214,
      2,
      0,
      146,
      24,
      140,
      93,
      52,
      0,
      0,
      0,
    ],
    "method": "POST",
    "url": "https://mock.xata.sh/db/xata:main/tables/users/query",
  },
  {
    "body": undefined,
    "method": "GET",
    "url": "https://mock.xata.sh/db/xata:main",
  },
]
`;

exports[`query > getMany > simple query 1`] = `
[
  {
    "body": Uint8Array [
      31,
      139,
      8,
      0,
      0,
      0,
      0,
      0,
      0,
      3,
      171,
      86,
      74,
      206,
      207,
      41,
      205,
      205,
      43,
      86,
      178,
      138,
      86,
      210,
      82,
      138,
      173,
      5,
      0,
      9,
      12,
      75,
      11,
      17,
      0,
      0,
      0,
    ],
    "method": "POST",
    "url": "https://mock.xata.sh/db/xata:main/tables/users/query",
  },
  {
    "body": undefined,
    "method": "GET",
    "url": "https://mock.xata.sh/db/xata:main",
  },
]
`;

exports[`request > builds the right arguments for a GET request 1`] = `
{
  "body": Uint8Array [
    31,
    139,
    8,
    0,
    0,
    0,
    0,
    0,
    0,
    3,
    171,
    86,
    42,
    72,
    76,
    79,
    85,
    178,
    170,
    86,
    42,
    206,
    172,
    2,
    210,
    134,
    181,
    58,
    74,
    201,
    249,
    57,
    165,
    185,
    121,
    197,
    74,
    86,
    209,
    74,
    90,
    74,
    177,
    181,
    0,
    26,
    238,
    206,
    141,
    35,
    0,
    0,
    0,
  ],
  "method": "POST",
  "url": "https://mock.xata.sh/db/xata:main/tables/users/query",
}
`;

exports[`request > builds the right arguments for a POST request 1`] = `
{
  "body": Uint8Array [
    31,
    139,
    8,
    0,
    0,
    0,
    0,
    0,
    0,
    3,
    171,
    86,
    42,
    72,
    76,
    79,
    85,
    178,
    170,
    86,
    42,
    206,
    172,
    2,
    210,
    70,
    6,
    181,
    58,
    74,
    201,
    249,
    57,
    165,
    185,
    121,
    197,
    74,
    86,
    209,
    74,
    90,
    74,
    177,
    181,
    0,
    101,
    58,
    75,
    209,
    36,
    0,
    0,
    0,
  ],
  "method": "POST",
  "url": "https://mock.xata.sh/db/xata:main/tables/users/query",
}
`;
